lib/yamfile-parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Yamfile: peg$parseYamfile,
  };
  let peg$startRuleFunction = peg$parseYamfile;

  const peg$c0 = "{";
  const peg$c1 = "}";
  const peg$c2 = ":";
  const peg$c3 = "always";
  const peg$c4 = "serial";
  const peg$c5 = "critical";
  const peg$c6 = "(";
  const peg$c7 = ")";
  const peg$c8 = ",";
  const peg$c9 = "needs";
  const peg$c10 = "watches";
  const peg$c11 = "@";
  const peg$c12 = "const";
  const peg$c13 = "var";
  const peg$c14 = "=";
  const peg$c15 = "env";
  const peg$c16 = "__";
  const peg$c17 = "$";
  const peg$c18 = "[";
  const peg$c19 = "]";
  const peg$c20 = "//";
  const peg$c21 = "/*";
  const peg$c22 = "\n";
  const peg$c23 = "\r";
  const peg$c24 = "$(";
  const peg$c25 = "*/";
  const peg$c26 = "\"";
  const peg$c27 = "'";
  const peg$c28 = "\\";
  const peg$c29 = "n";
  const peg$c30 = "r";
  const peg$c31 = "t";
  const peg$c32 = "\r\n";

  const peg$r0 = /^[^ \t\n\r{}"]/;
  const peg$r1 = /^[ \t]/;
  const peg$r2 = /^[a-zA-Z0-9_.\-]/;
  const peg$r3 = /^[a-zA-Z_]/;
  const peg$r4 = /^[a-zA-Z0-9_]/;
  const peg$r5 = /^[^\n\r{}]/;
  const peg$r6 = /^[^)]/;
  const peg$r7 = /^[^\n\r]/;
  const peg$r8 = /^["\\]/;
  const peg$r9 = /^['\\]/;
  const peg$r10 = /^["'\\]/;
  const peg$r11 = /^[ \t\n\r]/;

  const peg$e0 = peg$literalExpectation("{", false);
  const peg$e1 = peg$literalExpectation("}", false);
  const peg$e2 = peg$literalExpectation(":", false);
  const peg$e3 = peg$literalExpectation("always", false);
  const peg$e4 = peg$literalExpectation("serial", false);
  const peg$e5 = peg$literalExpectation("critical", false);
  const peg$e6 = peg$literalExpectation("(", false);
  const peg$e7 = peg$literalExpectation(")", false);
  const peg$e8 = peg$literalExpectation(",", false);
  const peg$e9 = peg$literalExpectation("needs", false);
  const peg$e10 = peg$literalExpectation("watches", false);
  const peg$e11 = peg$classExpectation([" ", "\t", "\n", "\r", "{", "}", "\""], true, false, false);
  const peg$e12 = peg$literalExpectation("@", false);
  const peg$e13 = peg$literalExpectation("const", false);
  const peg$e14 = peg$literalExpectation("var", false);
  const peg$e15 = peg$literalExpectation("=", false);
  const peg$e16 = peg$literalExpectation("env", false);
  const peg$e17 = peg$literalExpectation("__", false);
  const peg$e18 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e19 = peg$literalExpectation("$", false);
  const peg$e20 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ".", "-"], false, false, false);
  const peg$e21 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e22 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e23 = peg$literalExpectation("[", false);
  const peg$e24 = peg$literalExpectation("]", false);
  const peg$e25 = peg$literalExpectation("//", false);
  const peg$e26 = peg$literalExpectation("/*", false);
  const peg$e27 = peg$classExpectation(["\n", "\r", "{", "}"], true, false, false);
  const peg$e28 = peg$literalExpectation("\n", false);
  const peg$e29 = peg$literalExpectation("\r", false);
  const peg$e30 = peg$anyExpectation();
  const peg$e31 = peg$literalExpectation("$(", false);
  const peg$e32 = peg$classExpectation([")"], true, false, false);
  const peg$e33 = peg$classExpectation(["\n", "\r"], true, false, false);
  const peg$e34 = peg$literalExpectation("*/", false);
  const peg$e35 = peg$literalExpectation("\"", false);
  const peg$e36 = peg$literalExpectation("'", false);
  const peg$e37 = peg$classExpectation(["\"", "\\"], false, false, false);
  const peg$e38 = peg$literalExpectation("\\", false);
  const peg$e39 = peg$classExpectation(["'", "\\"], false, false, false);
  const peg$e40 = peg$classExpectation(["\"", "'", "\\"], false, false, false);
  const peg$e41 = peg$literalExpectation("n", false);
  const peg$e42 = peg$literalExpectation("r", false);
  const peg$e43 = peg$literalExpectation("t", false);
  const peg$e44 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e45 = peg$literalExpectation("\r\n", false);

  function peg$f0(items) {
    const result = {
      tasks: [],
      variables: [],
      constants: [],
      environmentVariables: [],
      platformBlocks: []
    };
    
    for (const item of items) {
      if (!item) continue;
      if (item.type === 'task') {
        result.tasks.push(item);
      } else if (item.type === 'variable') {
        result.variables.push(item);
      } else if (item.type === 'constant') {
        result.constants.push(item);
      } else if (item.type === 'environment_variable') {
        result.environmentVariables.push(item);
      } else if (item.type === 'platform_block') {
        result.platformBlocks.push(item);
      }
    }
    
    return result;
  }
  function peg$f1() {    return null;  }
  function peg$f2(mods, name, params, clauses, body) {
    const { commands, localVars, localConsts, localEnvVars, calls, internalFunctions } = body || { commands: [], localVars: [], localConsts: [], localEnvVars: [], calls: [], internalFunctions: [] };
    const task = makeTask(mods, name, params, clauses, commands, location);
    task.localVariables = localVars || [];
    task.localConstants = localConsts || [];
    task.localEnvironmentVariables = localEnvVars || [];
    task.calls = calls || [];
    task.internalFunctions = internalFunctions || [];
    return task;
  }
  function peg$f3(mods) {    return mods;  }
  function peg$f4(first, rest) {
    const result = [first];
    for (const r of rest) {
      result.push(r[3]);
    }
    return result;
  }
  function peg$f5() {    return 'always';  }
  function peg$f6() {    return 'serial';  }
  function peg$f7() {    return 'critical';  }
  function peg$f8(params) {    return params || [];  }
  function peg$f9(first, rest) {
    const result = [{ name: first, type: 'string' }];
    for (const r of rest) {
      result.push({ name: r[3], type: 'string' });
    }
    return result;
  }
  function peg$f10(needs, watches) {
    return {
      dependencies: needs.dependencies,
      dependencyParams: needs.dependencyParams,
      watchedFiles: watches || []
    };
  }
  function peg$f11(watches) {
    return {
      dependencies: [],
      dependencyParams: {},
      watchedFiles: watches
    };
  }
  function peg$f12(deps) {
    const dependencies = [];
    const dependencyParams = {};
    
    for (const dep of deps) {
      dependencies.push(dep.name);
      if (dep.parameters && dep.parameters.length > 0) {
        dependencyParams[dep.name] = dep.parameters;
      }
    }
    
    return { dependencies, dependencyParams };
  }
  function peg$f13(first, rest) {
    const result = [first];
    for (const r of rest) {
      result.push(r[2]);
    }
    return result;
  }
  function peg$f14(name, params) {
    return makeDependencyWithParams(name, params);
  }
  function peg$f15(files) {    return files;  }
  function peg$f16(first, rest) {
    const result = [first];
    for (const r of rest) {
      result.push(r[1]);
    }
    return result;
  }
  function peg$f17(chars) {    return chars.join('');  }
  function peg$f18(platforms, tasks) {
    return makePlatformBlock(platforms, tasks, location);
  }
  function peg$f19(first, rest) {
    const result = [first];
    for (const r of rest) {
      result.push(r[1]);
    }
    return result;
  }
  function peg$f20(name) {    return name;  }
  function peg$f21(task) {    return task;  }
  function peg$f22(lines) {
    const commands = [];
    const localVars = [];
    const localConsts = [];
    const localEnvVars = [];
    const calls = [];
    const inputs = [];
    const internalFunctions = [];
    
    for (const line of lines) {
      if (!line) continue;
      if (line.type === 'command') {
        commands.push(line.value);
      } else if (line.type === 'variable') {
        localVars.push(line);
      } else if (line.type === 'constant') {
        localConsts.push(line);
      } else if (line.type === 'environment_variable') {
        localEnvVars.push(line);
      } else if (line.type === 'call') {
        calls.push(line);
      } else if (line.type === 'input') {
        inputs.push(line);
      } else if (line.type === 'internal_function') {
        internalFunctions.push(line);
      } else if (line.type === 'assignment') {
        // Regular assignments are treated as special commands
        commands.push(`_assign ${line.name} = ${line.value}`);
      }
    }
    
    return { commands, localVars, localConsts, localEnvVars, calls, inputs, internalFunctions };
  }
  function peg$f23() {    return null;  }
  function peg$f24(line) {    return line;  }
  function peg$f25() {    return null;  }
  function peg$f26(type, name, value) {
    return makeVariable(type, name, value, location);
  }
  function peg$f27(name) {
    return {
      type: 'environment_variable',
      name: name,
      location: location()
    };
  }
  function peg$f28(functionName, params) {
    return {
      type: 'internal_function',
      name: functionName,
      params: params.map(p => p[1])
    };
  }
  function peg$f29(str) {    return { type: 'string', value: str };  }
  function peg$f30(arr) {    return { type: 'array', value: arr };  }
  function peg$f31(params) {    return { type: 'params', value: params };  }
  function peg$f32(name) {    return { type: 'variable', name: name };  }
  function peg$f33(chars) {    return { type: 'identifier', value: chars.join('') };  }
  function peg$f34(first, rest) {    return first + rest.join('');  }
  function peg$f35(first, rest) {
    const options = [first];
    for (const r of rest) {
      options.push(r[3]);
    }
    return options;
  }
  function peg$f36(params) {    return params || [];  }
  function peg$f37(first, rest) {
    const result = [first];
    for (const r of rest) {
      result.push(r[3]);
    }
    return result;
  }
  function peg$f38(name) {    return { type: 'variable', name: name };  }
  function peg$f39(value) {    return { type: 'literal', value: value };  }
  function peg$f40(name, value) {
    return {
      type: 'assignment',
      name: name,
      value: value
    };
  }
  function peg$f41(content) {
    return {
      type: 'command',
      value: content.trim()
    };
  }
  function peg$f42(chars) {    return chars.join('');  }
  function peg$f43(content) {    return "{" + (content || "") + "}";  }
  function peg$f44() {    return "\n";  }
  function peg$f45() {    return "\r";  }
  function peg$f46(type, name, value) {
    return makeVariable(type, name, value, location);
  }
  function peg$f47(name) {
    return {
      type: 'environment_variable',
      name: name,
      location: location()
    };
  }
  function peg$f48(chars) {    return chars.join('').trim();  }
  function peg$f49(char) {    return char;  }
  function peg$f50(cmd) {    return "$(" + cmd + ")";  }
  function peg$f51(chars) {    return chars.join('');  }
  function peg$f52() {    return null;  }
  function peg$f53() {    return null;  }
  function peg$f54(chars) {    return chars.join('');  }
  function peg$f55(chars) {    return chars.join('');  }
  function peg$f56(char) {    return char;  }
  function peg$f57(sequence) {    return sequence;  }
  function peg$f58(char) {    return char;  }
  function peg$f59(sequence) {    return sequence;  }
  function peg$f60() {    return "\n";  }
  function peg$f61() {    return "\r";  }
  function peg$f62() {    return "\t";  }
  function peg$f63(first, rest) {    return first + rest.join('');  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseYamfile() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseItem();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseItem();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseItem() {
    let s0, s1;

    s0 = peg$parsePlatformBlock();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTask();
      if (s0 === peg$FAILED) {
        s0 = peg$parseGlobalVariable();
        if (s0 === peg$FAILED) {
          s0 = peg$parseGlobalEnvironmentVariable();
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseComment();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f1();
            }
            s0 = s1;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseTask() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14;
